--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.1",
     "angular-4-data-table": "^0.2.3",
+    "angular-4-data-table-bootstrap-4": "^0.2.0",
     "angularfire2": "^4.0.0-rc.1",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
     "font-awesome": "^4.7.0",
     "ng2-validation": "^4.2.0",
+    "ng4-loading-spinner": "^1.2.3",
+    "ngx-toastr": "^6.4.1-beta.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
